[package]
name = "github-readme-graphs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.18", features = ["query"] }
reqwest = { version = "0.11.20", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
shuttle-axum = "0.27.0"
shuttle-runtime = "0.27.0"
shuttle-secrets = "0.27.0"
tera = "1.19.1"
tokio = "1.28.2"
serde_json = "1.0.107"
